syntax = "proto3";

package io.iohk.prism.protos;

import "node_models.proto";
import "wallet_models.proto";

service WalletService {
    // Get the wallet's DID, for now, there is a single DID.
    rpc GetDID (GetDIDRequest) returns (GetDIDResponse) {}

    // Given a message, sign it using the only existing key
    rpc SignMessage (SignMessageRequest) returns (SignMessageResponse) {}

    // given a signed message, verify that the signature corresponds to the given key
    rpc VerifySignedMessage (VerifySignedMessageRequest) returns (VerifySignedMessageResponse) {}

    // Creates a new wallet
    rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse) {}

    // Get wallet status
    rpc GetWalletStatus(GetWalletStatusRequest) returns (GetWalletStatusResponse) {}

    // Unlock wallet
    rpc unlockWallet(UnlockWalletRequest) returns (UnlockWalletResponse) {}

    // Lock  wallet
    rpc lockWallet(LockWalletRequest) returns (LockWalletResponse) {}

    // change pass phrase  wallet
    rpc changePassphrase(ChangePassphraseRequest) returns (ChangePassphraseResponse) {}

    // Generate DID Registration request
    rpc GenerateDID(GenerateDIDRequest) returns (GenerateDIDResponse) {}

}

message GetDIDRequest {}

message GetDIDResponse {
    string did = 1;
}

message SignMessageRequest {
    bytes message = 1;
}

message SignMessageResponse {
    bytes signature = 1;
}

message VerifySignedMessageRequest {
    ECPublicKey publicKey = 1;
    bytes message = 2;
    bytes signature = 3;
}

message VerifySignedMessageResponse {
    bool verified = 1;
}

message CreateWalletRequest {
    string passphrase = 1;
    string organisationName = 2;
    Role role = 3;
    bytes logo = 4;
}

message CreateWalletResponse {
    SignedAtalaOperation operation = 1;
}

message GetWalletStatusRequest {}

message GetWalletStatusResponse {
    enum WalletStatus {
        Missing = 0;
        Unlocked = 1;
        Locked = 2;
    }
    WalletStatus status = 1;
}

message UnlockWalletRequest {
    string passphrase = 1;
}

message UnlockWalletResponse {
    string organisationName = 4;
    Role role = 5;
    bytes logo = 6;
}

message LockWalletRequest {}

message LockWalletResponse {}

message ChangePassphraseRequest {
    string currentPassphrase = 1;
    string newPassphrase = 2;
}

message ChangePassphraseResponse {}

message GenerateDIDRequest {}

message GenerateDIDResponse {
    SignedAtalaOperation operation = 1;
}